--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -2,98 +2,96 @@
 layout: post
 title: IRS Docs and Subject Table
 ---
- 
-|Document No.|Title|
-|:-|:-|
-|f1040es|<a href=/irs.ea/assets/pdfs/f1040es.pdf" download>Form 1040-ES, Estimated Tax for Individuals</a>|
-|f1040s1|<a href=/irs.ea/assets/pdfs/f1040s1.pdf" download>Additional Income and Adjustments to Income</a>|
-|f1040s2|<a href=/irs.ea/assets/pdfs/f1040s2.pdf" download>Additional Taxes</a>|
-|f1040s3|<a href=/irs.ea/assets/pdfs/f1040s3.pdf" download>Additional Credits and Payments</a>|
-|f1040s|<a href=/irs.ea/assets/pdfs/f1040s.pdf" download>U.S. Tax Return for Seniors</a>|
-|f1040x|<a href=/irs.ea/assets/pdfs/f1040x.pdf" download>Amended U.S. Individual Income Tax Return</a>|
-|f1041|<a href=/irs.ea/assets/pdfs/f1041.pdf" download>U.S. Income Tax Return for Estates and Trusts</a>|
-|f1065|<a href=/irs.ea/assets/pdfs/f1065.pdf" download>U.S. Return of Partnership Income</a>|
-|f1099c|<a href=/irs.ea/assets/pdfs/f1099c.pdf" download>Cancellation of Debt</a>|
-|f1099r|<a href=/irs.ea/assets/pdfs/f1099r.pdf" download>Distributions From Pensions, Annuities, Retirement or Profit-Sharing Plans, IRAs, Insurance Contracts, etc.</a>|
-|f1116|<a href=/irs.ea/assets/pdfs/f1116.pdf" download>Foreign Tax Credit (Individual, Estate, or Trust)</a>|
-|f1120|<a href=/irs.ea/assets/pdfs/f1120.pdf" download>U.S. Corporation Income Tax Return</a>|
-|f1127|<a href=/irs.ea/assets/pdfs/f1127.pdf" download>Application for Extension of Time for Payment of Tax Due to Undue Hardship</a>|
-|f12153|<a href=/irs.ea/assets/pdfs/f12153.pdf" download>Request for a Collection Due Process or Equivalent Hearing</a>|
-|f13614c|<a href=/irs.ea/assets/pdfs/f13614c.pdf" download>Intake/Interview and Quality Review Sheet</a>|
-|f14039|<a href=/irs.ea/assets/pdfs/f14039.pdf" download>Identity Theft Affidavit</a>|
-|f2555|<a href=/irs.ea/assets/pdfs/f2555.pdf" download>Foreign Earned Income</a>|
-|f2587|<a href=/irs.ea/assets/pdfs/f2587.pdf" download>Application for Special Enrollment Examination</a>|
-|f2848|<a href=/irs.ea/assets/pdfs/f2848.pdf" download>Power of Attorney and Declaration of Representative</a>|
-|f3520|<a href=/irs.ea/assets/pdfs/f3520.pdf" download>Annual Return To Report Transactions With Foreign Trusts and Receipt of Certain Foreign Gifts</a>|
-|f4506|<a href=/irs.ea/assets/pdfs/f4506.pdf" download>Request for Copy of Tax Return</a>|
-|f4506t|<a href=/irs.ea/assets/pdfs/f4506t.pdf" download>Request for Transcript of Tax Return</a>|
-|f4868-auto-extension|<a href=/irs.ea/assets/pdfs/f4868-auto-extension.pdf" download>Application for Automatic Extension of Time To File U.S. Individual Income Tax Return</a>|
-|f5471|<a href=/irs.ea/assets/pdfs/f5471.pdf" download>Information Return of U.S. Persons With Respect To Certain Foreign Corporations</a>|
-|f706|<a href=/irs.ea/assets/pdfs/f706.pdf" download>US Estate (and Generation-Skipping Transfer) Tax Return</a>|
-|f843|<a href=/irs.ea/assets/pdfs/f843.pdf" download>Claim for Refund and Request for Abatement</a>|
-|f8453|<a href=/irs.ea/assets/pdfs/f8453.pdf" download>U.S. Individual Income Tax Transmittal for an IRS e-file Return</a>|
-|f8606|<a href=/irs.ea/assets/pdfs/f8606.pdf" download>Nondeductible IRAs</a>|
-|f8814|<a href=/irs.ea/assets/pdfs/f8814.pdf" download>Parents' Election To Report Child's Interest and Dividends</a>|
-|f8821|<a href=/irs.ea/assets/pdfs/f8821.pdf" download>Tax Information Authorization</a>|
-|f8879|<a href=/irs.ea/assets/pdfs/f8879.pdf" download>IRS e-file Signature Authorization</a>|
-|f8938|<a href=/irs.ea/assets/pdfs/f8938.pdf" download>Statement Of Specified Foreign Financial Assets</a>|
-|f8958|<a href=/irs.ea/assets/pdfs/f8958.pdf" download>Allocation of Tax Amounts Between Certain Individuals in Community Property States</a>|
-|f941|<a href=/irs.ea/assets/pdfs/f941.pdf" download>Employer's QUARTERLY Federal Tax Return</a>|
-|f9465|<a href=/irs.ea/assets/pdfs/f9465.pdf" download>Installment Agreement Request</a>|
-|filing_status_4012|<a href=/irs.ea/assets/pdfs/filing_status_4012.pdf" download>VITA/TCE Volunteer Resource Guide</a>|
-|fss4|<a href=/irs.ea/assets/pdfs/fss4.pdf" download>Application for Employer Identification Number</a>|
-|fw2|<a href=/irs.ea/assets/pdfs/fw2.pdf" download>Wage and Tax Statement</a>|
-|fw4|<a href=/irs.ea/assets/pdfs/fw4.pdf" download>Employee's Withholding Certificate</a>|
-|fw7|<a href=/irs.ea/assets/pdfs/fw7.pdf" download>Application for IRS Individual Taxpayer Identification Number</a>|
-|fw7sp|<a href=/irs.ea/assets/pdfs/fw7sp.pdf" download>Application for IRS Individual Taxpayer Identification Number (Spanish Version)</a>|
-|fw9|<a href=/irs.ea/assets/pdfs/fw9.pdf" download>Request for Taxpayer Identification Number and Certification</a>|
-|i1040gi|<a href=/irs.ea/assets/pdfs/i1040gi.pdf" download>1040, Instructions</a>|
-|i1040tt|<a href=/irs.ea/assets/pdfs/i1040tt.pdf" download>1040 TAX AND EARNED INCOME CREDIT TABLES, </a>|
-|i1040x|<a href=/irs.ea/assets/pdfs/i1040x.pdf" download>Instructions for Form 1040-X, Amended U.S. Individual Income Tax Return (Use With the February 2024 Revision of Form 1040-X)</a>|
-|i1041|<a href=/irs.ea/assets/pdfs/i1041.pdf" download>Instructions for Form 1041 and Schedules A, B, G, J, and K-1 , U.S. Income Tax Return for Estates and Trusts</a>|
-|i1065|<a href=/irs.ea/assets/pdfs/i1065.pdf" download>Instructions for Form 1065 , U.S. Return of Partnership Income </a>|
-|i1099ac|<a href=/irs.ea/assets/pdfs/i1099ac.pdf" download>Instructions for Forms 1099-A and 1099-C, Acquisition or Abandonment of Secured Property and Cancellation of Debt</a>|
-|i1116|<a href=/irs.ea/assets/pdfs/i1116.pdf" download>Instructions for Form 1116, Foreign Tax Credit  (Individual, Estate, or Trust)</a>|
-|i1120|<a href=/irs.ea/assets/pdfs/i1120.pdf" download>Instructions for Form 1120, U.S. Corporation Income Tax Return</a>|
-|i2555|<a href=/irs.ea/assets/pdfs/i2555.pdf" download>Instructions for Form 2555, Foreign Earned Income</a>|
-|i2848|<a href=/irs.ea/assets/pdfs/i2848.pdf" download>Instructions for Form 2848, Power of Attorney and Declaration of Representative</a>|
-|i3520|<a href=/irs.ea/assets/pdfs/i3520.pdf" download>Instructions for Form 3520, Annual Return To Report Transactions With Foreign Trusts and Receipt of Certain Foreign Gifts</a>|
-|i5471|<a href=/irs.ea/assets/pdfs/i5471.pdf" download>Instructions for Form 5471, Information Return of U.S. Persons  With Respect to Certain Foreign Corporations</a>|
-|i706|<a href=/irs.ea/assets/pdfs/i706.pdf" download>Instructions for Form 706, US Estate (and Generation-Skipping Transfer) Tax Return</a>|
-|i709|<a href=/irs.ea/assets/pdfs/i709.pdf" download>Instructions for Form 709, US Gift (and Generation-Skipping Transfer) Tax Return</a>|
-|i843|<a href=/irs.ea/assets/pdfs/i843.pdf" download>Instructions for Form 843, Claim for Refund and Request for Abatement</a>|
-|i8606|<a href=/irs.ea/assets/pdfs/i8606.pdf" download>Instructions for Form 8606, Nondeductible IRAs </a>|
-|i8814|<a href=/irs.ea/assets/pdfs/i8814.pdf" download>Instructions for Form 8814, Parents’ Election To Report Child’s Interest and Dividends</a>|
-|i8821|<a href=/irs.ea/assets/pdfs/i8821.pdf" download>Instructions for Form 8821,  Tax Information Authorization</a>|
-|i8865|<a href=/irs.ea/assets/pdfs/i8865.pdf" download>Instructions for Form 8865, Return of U.S. Persons With Respect to Certain Foreign Partnerships</a>|
-|i8936|<a href=/irs.ea/assets/pdfs/i8936.pdf" download>Instructions for Form 8936, Clean Vehicle Credits (and Schedule A (Form 8936), Clean Vehicle Credit Amount) </a>|
-|i8938|<a href=/irs.ea/assets/pdfs/i8938.pdf" download>Instructions for Form 8938 , Statement of Specified Foreign Financial Assets</a>|
-|i941|<a href=/irs.ea/assets/pdfs/i941.pdf" download>Instructions for Form 941, Employer's QUARTERLY Federal Tax Return</a>|
-|i9465|<a href=/irs.ea/assets/pdfs/i9465.pdf" download>Instructions for Form 9465, Installment Agreement Request (For use with Form 9465 (Rev. September 2020))</a>|
-|iss4|<a href=/irs.ea/assets/pdfs/iss4.pdf" download>Instructions for Form SS-4, Application for Employer Identification Number (EIN)</a>|
-|iw2w3|<a href=/irs.ea/assets/pdfs/iw2w3.pdf" download>General Instructions for Forms W-2 and W-3, (Including Forms W-2AS, W-2CM, W-2GU, W-2VI, W-3SS, W-2c, and W-3c)</a>|
-|iw7|<a href=/irs.ea/assets/pdfs/iw7.pdf" download>Instructions for Form W-7, Application for IRS Individual Taxpayer Identification Number (Use with the August 2019 revision of Form W-7)</a>|
-|iw7sp|<a href=/irs.ea/assets/pdfs/iw7sp.pdf" download>Instrucciones para el Formulario W-7, Solicitud de Número de Identificación Personal del Contribuyente del Servicio de Impuestos Internos (Use estas instrucciones con el Formulario W-7 (Rev. septiembre de 2019))</a>|
-|iw9|<a href=/irs.ea/assets/pdfs/iw9.pdf" download>Instructions for the  Requester of Form W-9, Request for Taxpayer Identification Number and Certification</a>|
-|p1660|<a href=/irs.ea/assets/pdfs/p1660.pdf" download>Collection Appeal Rights</a>|
-|p17|<a href=/irs.ea/assets/pdfs/p17.pdf" download>Your Federal Income Tax, For Individuals</a>|
-|p216|<a href=/irs.ea/assets/pdfs/p216.pdf" download>Conferences and Practice Requirements</a>|
-|p334|<a href=/irs.ea/assets/pdfs/p334.pdf" download>Tax Guide for Small Business, (For Individuals Who Use Schedule C)</a>|
-|p3|<a href=/irs.ea/assets/pdfs/p3.pdf" download>Armed Forces' Tax Guide</a>|
-|p4012|<a href=/irs.ea/assets/pdfs/p4012.pdf" download>VITA/TCE Volunteer Resource Guide</a>|
-|p4245|<a href=/irs.ea/assets/pdfs/p4245.pdf" download>Power of Attorney Preparation Guide</a>|
-|p4491|<a href=/irs.ea/assets/pdfs/p4491.pdf" download>VITA/TCE Training Guide</a>|
-|p4491x|<a href=/irs.ea/assets/pdfs/p4491x.pdf" download>VITA/TCE Training Guide</a>|
-|p463|<a href=/irs.ea/assets/pdfs/p463.pdf" download> Travel, Gift, and Car Expenses</a>|
-|p505|<a href=/irs.ea/assets/pdfs/p505.pdf" download>Tax  Withholding  and Estimated  Tax</a>|
-|p519|<a href=/irs.ea/assets/pdfs/p519.pdf" download>U.S. Tax Guide for Aliens</a>|
-|p525|<a href=/irs.ea/assets/pdfs/p525.pdf" download>Taxable and Nontaxable  Income</a>|
-|p5477-IPPIN|<a href=/irs.ea/assets/pdfs/p5477-IPPIN.pdf" download>All taxpayers now eligible for Identity Protection PINs </a>|
-|p54|<a href=/irs.ea/assets/pdfs/p54.pdf" download>Tax Guide for U.S. Citizens and Resident Aliens Abroad</a>|
-|p555|<a href=/irs.ea/assets/pdfs/p555.pdf" download>Community Property</a>|
-|p556|<a href=/irs.ea/assets/pdfs/p556.pdf" download>Examination  of Returns, Appeal Rights, and Claims for Refund</a>|
-|p559|<a href=/irs.ea/assets/pdfs/p559.pdf" download>Survivors, Executors, and Administrators</a>|
-|p590b|<a href=/irs.ea/assets/pdfs/p590b.pdf" download>Distributions from Individual Retirement Arrangements (IRAs)</a>|
-|p594|<a href=/irs.ea/assets/pdfs/p594.pdf" download>The IRS Collection Process</a>|
-|p926|<a href=/irs.ea/assets/pdfs/p926.pdf" download>Household Employer's Tax Guide</a>|
-|p970|<a href=/irs.ea/assets/pdfs/p970.pdf" download>Tax Benefits for Education</a>|
+
+1. f1040es, <a href=/irs.ea/assets/pdfs/f1040es.pdf" download>Form 1040-ES, Estimated Tax for Individuals</a>
+1. f1040s1, <a href=/irs.ea/assets/pdfs/f1040s1.pdf" download>Additional Income and Adjustments to Income</a>
+1. f1040s2, <a href=/irs.ea/assets/pdfs/f1040s2.pdf" download>Additional Taxes</a>
+1. f1040s3, <a href=/irs.ea/assets/pdfs/f1040s3.pdf" download>Additional Credits and Payments</a>
+1. f1040s, <a href=/irs.ea/assets/pdfs/f1040s.pdf" download>US Tax Return for Seniors</a>
+1. f1040x, <a href=/irs.ea/assets/pdfs/f1040x.pdf" download>Amended US Individual Income Tax Return</a>
+1. f1041, <a href=/irs.ea/assets/pdfs/f1041.pdf" download>US Income Tax Return for Estates and Trusts</a>
+1. f1065, <a href=/irs.ea/assets/pdfs/f1065.pdf" download>US Return of Partnership Income</a>
+1. f1099c, <a href=/irs.ea/assets/pdfs/f1099c.pdf" download>Cancellation of Debt</a>
+1. f1099r, <a href=/irs.ea/assets/pdfs/f1099r.pdf" download>Distributions From Pensions, Annuities, Retirement or Profit-Sharing Plans, IRAs, Insurance Contracts, etc.</a>
+1. f1116, <a href=/irs.ea/assets/pdfs/f1116.pdf" download>Foreign Tax Credit (Individual, Estate, or Trust)</a>
+1. f1120, <a href=/irs.ea/assets/pdfs/f1120.pdf" download>US Corporation Income Tax Return</a>
+1. f1127, <a href=/irs.ea/assets/pdfs/f1127.pdf" download>Application for Extension of Time for Payment of Tax Due to Undue Hardship</a>
+1. f12153, <a href=/irs.ea/assets/pdfs/f12153.pdf" download>Request for a Collection Due Process or Equivalent Hearing</a>
+1. f13614c, <a href=/irs.ea/assets/pdfs/f13614c.pdf" download>Intake/Interview and Quality Review Sheet</a>
+1. f14039, <a href=/irs.ea/assets/pdfs/f14039.pdf" download>Identity Theft Affidavit</a>
+1. f2555, <a href=/irs.ea/assets/pdfs/f2555.pdf" download>Foreign Earned Income</a>
+1. f2587, <a href=/irs.ea/assets/pdfs/f2587.pdf" download>Application for Special Enrollment Examination</a>
+1. f2848, <a href=/irs.ea/assets/pdfs/f2848.pdf" download>Power of Attorney and Declaration of Representative</a>
+1. f3520, <a href=/irs.ea/assets/pdfs/f3520.pdf" download>Annual Return To Report Transactions With Foreign Trusts and Receipt of Certain Foreign Gifts</a>
+1. f4506, <a href=/irs.ea/assets/pdfs/f4506.pdf" download>Request for Copy of Tax Return</a>
+1. f4506t, <a href=/irs.ea/assets/pdfs/f4506t.pdf" download>Request for Transcript of Tax Return</a>
+1. f4868-auto-extension, <a href=/irs.ea/assets/pdfs/f4868-auto-extension.pdf" download>Application for Automatic Extension of Time To File US Individual Income Tax Return</a>
+1. f5471, <a href=/irs.ea/assets/pdfs/f5471.pdf" download>Information Return of US Persons With Respect To Certain Foreign Corporations</a>
+1. f706, <a href=/irs.ea/assets/pdfs/f706.pdf" download>US Estate (and Generation-Skipping Transfer) Tax Return</a>
+1. f843, <a href=/irs.ea/assets/pdfs/f843.pdf" download>Claim for Refund and Request for Abatement</a>
+1. f8453, <a href=/irs.ea/assets/pdfs/f8453.pdf" download>US Individual Income Tax Transmittal for an IRS e-file Return</a>
+1. f8606, <a href=/irs.ea/assets/pdfs/f8606.pdf" download>Nondeductible IRAs</a>
+1. f8814, <a href=/irs.ea/assets/pdfs/f8814.pdf" download>Parents' Election To Report Child's Interest and Dividends</a>
+1. f8821, <a href=/irs.ea/assets/pdfs/f8821.pdf" download>Tax Information Authorization</a>
+1. f8879, <a href=/irs.ea/assets/pdfs/f8879.pdf" download>IRS e-file Signature Authorization</a>
+1. f8938, <a href=/irs.ea/assets/pdfs/f8938.pdf" download>Statement Of Specified Foreign Financial Assets</a>
+1. f8958, <a href=/irs.ea/assets/pdfs/f8958.pdf" download>Allocation of Tax Amounts Between Certain Individuals in Community Property States</a>
+1. f941, <a href=/irs.ea/assets/pdfs/f941.pdf" download>Employer's QUARTERLY Federal Tax Return</a>
+1. f9465, <a href=/irs.ea/assets/pdfs/f9465.pdf" download>Installment Agreement Request</a>
+1. filing_status_4012, <a href=/irs.ea/assets/pdfs/filing_status_4012.pdf" download>VITA/TCE Volunteer Resource Guide</a>
+1. fss4, <a href=/irs.ea/assets/pdfs/fss4.pdf" download>Application for Employer Identification Number</a>
+1. fw2, <a href=/irs.ea/assets/pdfs/fw2.pdf" download>Wage and Tax Statement</a>
+1. fw4, <a href=/irs.ea/assets/pdfs/fw4.pdf" download>Employee's Withholding Certificate</a>
+1. fw7, <a href=/irs.ea/assets/pdfs/fw7.pdf" download>Application for IRS Individual Taxpayer Identification Number</a>
+1. fw7sp, <a href=/irs.ea/assets/pdfs/fw7sp.pdf" download>Application for IRS Individual Taxpayer Identification Number (Spanish Version)</a>
+1. fw9, <a href=/irs.ea/assets/pdfs/fw9.pdf" download>Request for Taxpayer Identification Number and Certification</a>
+1. i1040gi, <a href=/irs.ea/assets/pdfs/i1040gi.pdf" download>1040, Instructions</a>
+1. i1040tt, <a href=/irs.ea/assets/pdfs/i1040tt.pdf" download>1040 TAX AND EARNED INCOME CREDIT TABLES, </a>
+1. i1040x, <a href=/irs.ea/assets/pdfs/i1040x.pdf" download>Instructions for Form 1040-X, Amended US Individual Income Tax Return (Use With the February 2024 Revision of Form 1040-X)</a>
+1. i1041, <a href=/irs.ea/assets/pdfs/i1041.pdf" download>Instructions for Form 1041 and Schedules A, B, G, J, and K-1 , US Income Tax Return for Estates and Trusts</a>
+1. i1065, <a href=/irs.ea/assets/pdfs/i1065.pdf" download>Instructions for Form 1065 , US Return of Partnership Income </a>
+1. i1099ac, <a href=/irs.ea/assets/pdfs/i1099ac.pdf" download>Instructions for Forms 1099-A and 1099-C, Acquisition or Abandonment of Secured Property and Cancellation of Debt</a>
+1. i1116, <a href=/irs.ea/assets/pdfs/i1116.pdf" download>Instructions for Form 1116, Foreign Tax Credit (Individual, Estate, or Trust)</a>
+1. i1120, <a href=/irs.ea/assets/pdfs/i1120.pdf" download>Instructions for Form 1120, US Corporation Income Tax Return</a>
+1. i2555, <a href=/irs.ea/assets/pdfs/i2555.pdf" download>Instructions for Form 2555, Foreign Earned Income</a>
+1. i2848, <a href=/irs.ea/assets/pdfs/i2848.pdf" download>Instructions for Form 2848, Power of Attorney and Declaration of Representative</a>
+1. i3520, <a href=/irs.ea/assets/pdfs/i3520.pdf" download>Instructions for Form 3520, Annual Return To Report Transactions With Foreign Trusts and Receipt of Certain Foreign Gifts</a>
+1. i5471, <a href=/irs.ea/assets/pdfs/i5471.pdf" download>Instructions for Form 5471, Information Return of US Persons With Respect to Certain Foreign Corporations</a>
+1. i706, <a href=/irs.ea/assets/pdfs/i706.pdf" download>Instructions for Form 706, US Estate (and Generation-Skipping Transfer) Tax Return</a>
+1. i709, <a href=/irs.ea/assets/pdfs/i709.pdf" download>Instructions for Form 709, US Gift (and Generation-Skipping Transfer) Tax Return</a>
+1. i843, <a href=/irs.ea/assets/pdfs/i843.pdf" download>Instructions for Form 843, Claim for Refund and Request for Abatement</a>
+1. i8606, <a href=/irs.ea/assets/pdfs/i8606.pdf" download>Instructions for Form 8606, Nondeductible IRAs </a>
+1. i8814, <a href=/irs.ea/assets/pdfs/i8814.pdf" download>Instructions for Form 8814, Parents’ Election To Report Child’s Interest and Dividends</a>
+1. i8821, <a href=/irs.ea/assets/pdfs/i8821.pdf" download>Instructions for Form 8821, Tax Information Authorization</a>
+1. i8865, <a href=/irs.ea/assets/pdfs/i8865.pdf" download>Instructions for Form 8865, Return of US Persons With Respect to Certain Foreign Partnerships</a>
+1. i8936, <a href=/irs.ea/assets/pdfs/i8936.pdf" download>Instructions for Form 8936, Clean Vehicle Credits (and Schedule A (Form 8936), Clean Vehicle Credit Amount) </a>
+1. i8938, <a href=/irs.ea/assets/pdfs/i8938.pdf" download>Instructions for Form 8938 , Statement of Specified Foreign Financial Assets</a>
+1. i941, <a href=/irs.ea/assets/pdfs/i941.pdf" download>Instructions for Form 941, Employer's QUARTERLY Federal Tax Return</a>
+1. i9465, <a href=/irs.ea/assets/pdfs/i9465.pdf" download>Instructions for Form 9465, Installment Agreement Request (For use with Form 9465 (Rev. September 2020))</a>
+1. iss4, <a href=/irs.ea/assets/pdfs/iss4.pdf" download>Instructions for Form SS-4, Application for Employer Identification Number (EIN)</a>
+1. iw2w3, <a href=/irs.ea/assets/pdfs/iw2w3.pdf" download>General Instructions for Forms W-2 and W-3, (Including Forms W-2AS, W-2CM, W-2GU, W-2VI, W-3SS, W-2c, and W-3c)</a>
+1. iw7, <a href=/irs.ea/assets/pdfs/iw7.pdf" download>Instructions for Form W-7, Application for IRS Individual Taxpayer Identification Number (Use with the August 2019 revision of Form W-7)</a>
+1. iw7sp, <a href=/irs.ea/assets/pdfs/iw7sp.pdf" download>Instrucciones para el Formulario W-7, Solicitud de Número de Identificación Personal del Contribuyente del Servicio de Impuestos Internos (Use estas instrucciones con el Formulario W-7 (Rev. septiembre de 2019))</a>
+1. iw9, <a href=/irs.ea/assets/pdfs/iw9.pdf" download>Instructions for the Requester of Form W-9, Request for Taxpayer Identification Number and Certification</a>
+1. p1660, <a href=/irs.ea/assets/pdfs/p1660.pdf" download>Collection Appeal Rights</a>
+1. p17, <a href=/irs.ea/assets/pdfs/p17.pdf" download>Your Federal Income Tax, For Individuals</a>
+1. p216, <a href=/irs.ea/assets/pdfs/p216.pdf" download>Conferences and Practice Requirements</a>
+1. p334, <a href=/irs.ea/assets/pdfs/p334.pdf" download>Tax Guide for Small Business, (For Individuals Who Use Schedule C)</a>
+1. p3, <a href=/irs.ea/assets/pdfs/p3.pdf" download>Armed Forces' Tax Guide</a>
+1. p4012, <a href=/irs.ea/assets/pdfs/p4012.pdf" download>VITA/TCE Volunteer Resource Guide</a>
+1. p4245, <a href=/irs.ea/assets/pdfs/p4245.pdf" download>Power of Attorney Preparation Guide</a>
+1. p4491, <a href=/irs.ea/assets/pdfs/p4491.pdf" download>VITA/TCE Training Guide</a>
+1. p4491x, <a href=/irs.ea/assets/pdfs/p4491x.pdf" download>VITA/TCE Training Guide</a>
+1. p463, <a href=/irs.ea/assets/pdfs/p463.pdf" download> Travel, Gift, and Car Expenses</a>
+1. p505, <a href=/irs.ea/assets/pdfs/p505.pdf" download>Tax Withholding and Estimated Tax</a>
+1. p519, <a href=/irs.ea/assets/pdfs/p519.pdf" download>US Tax Guide for Aliens</a>
+1. p525, <a href=/irs.ea/assets/pdfs/p525.pdf" download>Taxable and Nontaxable Income</a>
+1. p5477-IPPIN, <a href=/irs.ea/assets/pdfs/p5477-IPPIN.pdf" download>All taxpayers now eligible for Identity Protection PINs </a>
+1. p54, <a href=/irs.ea/assets/pdfs/p54.pdf" download>Tax Guide for US Citizens and Resident Aliens Abroad</a>
+1. p555, <a href=/irs.ea/assets/pdfs/p555.pdf" download>Community Property</a>
+1. p556, <a href=/irs.ea/assets/pdfs/p556.pdf" download>Examination of Returns, Appeal Rights, and Claims for Refund</a>
+1. p559, <a href=/irs.ea/assets/pdfs/p559.pdf" download>Survivors, Executors, and Administrators</a>
+1. p590b, <a href=/irs.ea/assets/pdfs/p590b.pdf" download>Distributions from Individual Retirement Arrangements (IRAs)</a>
+1. p594, <a href=/irs.ea/assets/pdfs/p594.pdf" download>The IRS Collection Process</a>
+1. p926, <a href=/irs.ea/assets/pdfs/p926.pdf" download>Household Employer's Tax Guide</a>
+1. p970, <a href=/irs.ea/assets/pdfs/p970.pdf" download>Tax Benefits for Education</a>
