testing link on Docs Subject page

--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -5,7 +5,7 @@ title: IRS Docs and Subject Table
  
 |Document No.|Subject|
 |:-|:-|
-|f1040es| Form 1040-ES, Estimated Tax for Individuals|
+|[f1040es](/irs.ea/docs/f1040es.pdf.md)| Form 1040-ES, Estimated Tax for Individuals|
 |f1040s1| Additional Income and Adjustments to Income|
 |f1040s2| Additional Taxes|
 |f1040s3| Additional Credits and Payments|
