new 1.pdf2table

--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -5,7 +5,7 @@ title: IRS Docs & Subject Table
  
 |Document No.|Subject|
 |:-|:-|
-|[f1040es](/irs.ea/_docs/f706.pdf.md)| Form 706 |
+|[f1040es](/irs.ea/_docs/f706.pdf)| Form 706 |
 |f1040s1| Additional Income & Adjustments to Income|
 |f1040s2| Additional Taxes|
 |f1040s3| Additional Credits & Payments|
