--- a/_docs/f941.md
+++ b/_docs/f941.md
@@ -4,6 +4,6 @@ title: f941.pdf
 ---
 
 <div class="pdf-container">
-<iframe src="irs.ea/assets/pdfs/f941" height="600" width="100%" allowFullScreen="true"></iframe>
+<iframe src="/irs.ea/assets/pdfs/f941" height="600" width="100%" allowFullScreen="true"></iframe>
 </div>
 
