used filename to get *.pdf"

--- a/_docs/f706.md
+++ b/_docs/f706.md
@@ -4,6 +4,6 @@ title: f706.pdf
 ---
 
 <div class="pdf-container">
-<iframe src="/irs.ea/assets/pdfs/f706" height="600" width="100%" allowFullScreen="true"></iframe>
+<iframe src="/irs.ea/assets/pdfs/f706.pdf" height="600" width="100%" allowFullScreen="true"></iframe>
 </div>
 
