--- a/_docs/f843.md
+++ b/_docs/f843.md
@@ -4,6 +4,6 @@ title: f843.pdf
 ---
 
 <div class="pdf-container">
-<iframe src="/irs.ea/assets/pdfs/f843" height="600" width="100%" allowFullScreen="true"></iframe>
+<iframe src="/irs.ea/assets/pdfs/f843.pdf" height="600" width="100%" allowFullScreen="true"></iframe>
 </div>
 
