fixing Pages 1.pdf2table.md

--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -5,94 +5,6 @@ title: IRS Docs & Subject Table
  
 |Document No.|Subject|
 |:-|:-|
-|[f1040es](/irs.ea/_docs/f706)| Form 706 |
-|f1040s1| Additional Income & Adjustments to Income|
-|f1040s2| Additional Taxes|
-|f1040s3| Additional Credits & Payments|
-|f1040s| US Tax Return for Seniors|
-|f1040x| Amended US Individual Income Tax Return|
-|f1041| US Income Tax Return for Estates & Trusts|
-|f1065| US Return of Partnership Income|
-|f1099c| Cancellation of Debt|
-|f1099r| Distributions From Pensions, Annuities, Retirement or Profit-Sharing Plans, IRAs, Insurance Contracts, etc.|
-|f1116| Foreign Tax Credit (Individual, Estate, or Trust)|
-|f1120| US Corporation Income Tax Return|
-|f1127| Application for Extension of Time for Payment of Tax Due to Undue Hardship|
-|f12153| Request for a Collection Due Process or Equivalent Hearing|
-|f13614c| Intake/Interview & Quality Review Sheet|
-|f14039| Identity Theft Affidavit|
-|f2555| Foreign Earned Income|
-|f2587| Application for Special Enrollment Examination|
-|f2848| Power of Attorney & Declaration of Representative|
-|f3520| Annual Return To Report Transactions With Foreign Trusts & Receipt of Certain Foreign Gifts|
-|f4506| Request for Copy of Tax Return|
-|f4506t| Request for Transcript of Tax Return|
-|f4868-auto-extension| Application for Automatic Extension of Time To File US Individual Income Tax Return|
-|f5471| Information Return of US Persons With Respect To Certain Foreign Corporations|
-|f706| US Estate (and Generation-Skipping Transfer) Tax Return|
-|f843| Claim for Refund & Request for Abatement|
-|f8453| US Individual Income Tax Transmittal for an IRS e-file Return|
-|f8606| Nondeductible IRAs|
-|f8814| Parents' Election To Report Child's Interest & Dividends|
-|f8821| Tax Information Authorization|
-|f8879| IRS e-file Signature Authorization|
-|f8938| Statement Of Specified Foreign Financial Assets|
-|f8958| Allocation of Tax Amounts Between Certain Individuals in Community Property States|
-|f941| Employer's QUARTERLY Federal Tax Return|
-|f9465| Installment Agreement Request|
-|filing_status_4012| VITA/TCE Volunteer Resource Guide|
-|fss4| Application for Employer Identification Number|
-|fw2| Wage & Tax Statement|
-|fw4| Employee's Withholding Certificate|
-|fw7| Application for IRS Individual Taxpayer Identification Number|
-|fw7sp| Application for IRS Individual Taxpayer Identification Number (Spanish Version)|
-|fw9| Request for Taxpayer Identification Number & Certification|
-|i1040gi| 1040, Instructions|
-|i1040tt| 1040 TAX & EARNED INCOME CREDIT TABLES, |
-|i1040x| Instructions for Form 1040-X, Amended US Individual Income Tax Return (Use With the February 2024 Revision of Form 1040-X)|
-|i1041| Instructions for Form 1041 & Schedules A, B, G, J, & K-1, US Income Tax Return for Estates & Trusts|
-|i1065| Instructions for Form 1065 , US Return of Partnership Income |
-|i1099ac| Instructions for Forms 1099-A & 1099-C, Acquisition or Abandonment of Secured Property & Cancellation of Debt|
-|i1116| Instructions for Form 1116, Foreign Tax Credit  (Individual, Estate, or Trust)|
-|i1120| Instructions for Form 1120, US Corporation Income Tax Return|
-|i2555| Instructions for Form 2555, Foreign Earned Income|
-|i2848| Instructions for Form 2848, Power of Attorney & Declaration of Representative|
-|i3520| Instructions for Form 3520, Annual Return To Report Transactions With Foreign Trusts & Receipt of Certain Foreign Gifts|
-|i5471| Instructions for Form 5471, Information Return of US Persons  With Respect to Certain Foreign Corporations|
-|i706| Instructions for Form 706, US Estate (and Generation-Skipping Transfer) Tax Return|
-|i709| Instructions for Form 709, US Gift (and Generation-Skipping Transfer) Tax Return|
-|i843| Instructions for Form 843, Claim for Refund & Request for Abatement|
-|i8606| Instructions for Form 8606, Nondeductible IRAs |
-|i8814| Instructions for Form 8814, Parents’ Election To Report Child’s Interest & Dividends|
-|i8821| Instructions for Form 8821,  Tax Information Authorization|
-|i8865| Instructions for Form 8865, Return of US Persons With Respect to Certain Foreign Partnerships|
-|i8936| Instructions for Form 8936, Clean Vehicle Credits (and Schedule A (Form 8936), Clean Vehicle Credit Amount) |
-|i8938| Instructions for Form 8938, Statement of Specified Foreign Financial Assets|
-|i941| Instructions for Form 941, Employer's QUARTERLY Federal Tax Return|
-|i9465| Instructions for Form 9465, Installment Agreement Request (For use with Form 9465 (Rev. September 2020))|
-|iss4| Instructions for Form SS-4, Application for Employer Identification Number (EIN)|
-|iw2w3| General Instructions for Forms W-2 & W-3, (Including Forms W-2AS, W-2CM, W-2GU, W-2VI, W-3SS, W-2c, & W-3c)|
-|iw7| Instructions for Form W-7, Application for IRS Individual Taxpayer Identification Number (Use with the August 2019 revision of Form W-7)|
-|iw9| Instructions for the  Requester of Form W-9, Request for Taxpayer Identification Number & Certification|
-|p1660| Collection Appeal Rights|
-|p17| Your Federal Income Tax, For Individuals|
-|p216| Conferences & Practice Requirements|
-|p334| Tax Guide for Small Business, (For Individuals Who Use Schedule C)|
-|p3| Armed Forces' Tax Guide|
-|p4012| VITA/TCE Volunteer Resource Guide|
-|p4245| Power of Attorney Preparation Guide|
-|p4491| VITA/TCE Training Guide|
-|p4491x| VITA/TCE Training Guide|
-|p463| Travel, Gift, & Car Expenses|
-|p505| Tax  Withholding  & Estimated  Tax|
-|p519| US Tax Guide for Aliens|
-|p525| Taxable & Nontaxable  Income|
-|p5477-IPPIN| All taxpayers now eligible for Identity Protection PINs |
-|p54| Tax Guide for US Citizens & Resident Aliens Abroad|
-|p555| Community Property|
-|p556| Examination of Returns, Appeal Rights, & Claims for Refund|
-|p559| Survivors, Executors, & Administrators|
-|p590b| Distributions from Individual Retirement Arrangements (IRAs)|
-|p594| The IRS Collection Process|
-|p926| Household Employer's Tax Guide|
-|p970| Tax Benefits for Education|
+|[f706](/irs.ea/_docs/f706)| Form 706 |
+|[f843](/irs.ea/_docs/f843)| Form 843 |
+|[f941](/irs.ea/_docs/f941)| Form 941 |
