--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -5,6 +5,6 @@ title: IRS Docs & Subject Table
  
 |Document No.|Subject|
 |:-|:-|
-|[f706](/irs.ea/_docs/f706)| Form 706 |
-|[f843](/irs.ea/_docs/f843)| Form 843 |
-|[f941](/irs.ea/_docs/f941)| Form 941 |
+|[f706](/irs.ea/docs/f706)| Form 706 |
+|[f843](/irs.ea/docs/f843)| Form 843 |
+|[f941](/irs.ea/docs/f941)| Form 941 |
