--- a/_pages/1.pdf2table.md
+++ b/_pages/1.pdf2table.md
@@ -5,6 +5,6 @@ title: IRS Docs & Subject Table
  
 |Document No.|Subject|
 |:-|:-|
-|[f706](/irs.ea/docs/f706)| Form 706 |
-|[f843](/irs.ea/docs/f843)| Form 843 |
-|[f941](/irs.ea/docs/f941)| Form 941 |
+|[SEE-1-NOTES.pdf](/irs.ea/pages/002-see-1-notes)| SEE-1-NOTES |
+|[p173](/irs.ea/docs/p17)| Tax Guide |
+
